# advanced-denoising-mcrenderings

./: .gitignore  CMakeLists.txt  README.md  Untitled.ipynb  avx_mathfun.h  denoise.h  exr.cpp  exr.h  exrload.cpp  exrload.h  flt.c  flt.cpp  flt.h  flt.hpp  flt_blocking.cpp  flt_blocking.hpp  flt_restructure.cpp  flt_restructure.hpp  flt_restructureILP.cpp  flt_restructureSSA.cpp  flt_restructure_BLK.cpp  flt_restructure_BLK_noprec.cpp  flt_restructure_ILP.cpp  flt_restructure_ILP2.cpp  flt_restructure_ILP2_unroll.cpp  flt_restructure_ILP_unroll.cpp  flt_restructure_VEC.cpp  flt_restructure_vectorized.cpp  fltopcount.cpp  fltopcount.hpp  main.cpp  memory_mgmt.cpp  memory_mgmt.hpp  tests.cpp  tests.hpp  tsc_x86.h  unroll.py  validation.cpp  validation.hpp
analysis/: PerformanceAnalysis.ipynb  performance_VaryingR.sh  performance_evaluation.sh
analysis/.ipynb_checkpoints/: PerformanceAnalysis-checkpoint.ipynb
implementations/: basic.cpp  basic_restructure.cpp  basic_restructure1.cpp  basic_restructure2.cpp  basic_restructure3.cpp  basic_restructure3bis.cpp  basic_restructure4.cpp  basic_restructure5.cpp  basic_restructure6.cpp  basic_restructure7.cpp  basic_restructure8.cpp  impl_blocking.cpp  optcount.cpp  register.hpp
implementations/personal_binninger_opti/: basic_opt1.cpp  flt_opt1.cpp  flt_opt1.hpp
reference_implementation/: checkDiff.m  exrinfo.mexmaci64  exrread.mexmaci64  exrreadchannels.mexmaci64  exrwrite.mexmaci64  exrwritechannels.mexmaci64  imageDenosing_advanced.m  imageDenosing_simple.m
renderings/100spp/1024/: scene_Coateddiffuse_depth.exr  scene_Coateddiffuse_depth_variance.exr
renderings/100spp/112/: scene_Coateddiffuse.exr  scene_Coateddiffuse_albedo.exr  scene_Coateddiffuse_albedo_variance.exr  scene_Coateddiffuse_depth.exr  scene_Coateddiffuse_depth_variance.exr  scene_Coateddiffuse_normal.exr  scene_Coateddiffuse_normal_variance.exr  scene_Coateddiffuse_variance.exr
renderings/100spp/128/: scene_Coateddiffuse.exr  scene_Coateddiffuse_albedo.exr  scene_Coateddiffuse_albedo_variance.exr  scene_Coateddiffuse_depth.exr  scene_Coateddiffuse_depth_variance.exr  scene_Coateddiffuse_normal.exr  scene_Coateddiffuse_normal_variance.exr  scene_Coateddiffuse_variance.exr
renderings/100spp/2048/: scene_Coateddiffuse_100spp_2048x2048_depth.exr  scene_Coateddiffuse_100spp_2048x2048_depth_variance.exr
renderings/100spp/256/: scene_Coateddiffuse.exr  scene_Coateddiffuse_100spp_256x256.exr  scene_Coateddiffuse_100spp_256x256_albedo.exr  scene_Coateddiffuse_100spp_256x256_albedo_variance.exr  scene_Coateddiffuse_100spp_256x256_depth.exr  scene_Coateddiffuse_100spp_256x256_depth_variance.exr  scene_Coateddiffuse_100spp_256x256_normal.exr  scene_Coateddiffuse_100spp_256x256_normal_variance.exr  scene_Coateddiffuse_100spp_256x256_variance.exr  scene_Coateddiffuse_albedo.exr  scene_Coateddiffuse_albedo_variance.exr  scene_Coateddiffuse_depth.exr  scene_Coateddiffuse_depth_variance.exr  scene_Coateddiffuse_normal.exr  scene_Coateddiffuse_normal_variance.exr  scene_Coateddiffuse_variance.exr
renderings/100spp/32/: scene_Coateddiffuse.exr  scene_Coateddiffuse_albedo.exr  scene_Coateddiffuse_albedo_variance.exr  scene_Coateddiffuse_depth.exr  scene_Coateddiffuse_depth_variance.exr  scene_Coateddiffuse_normal.exr  scene_Coateddiffuse_normal_variance.exr  scene_Coateddiffuse_variance.exr
renderings/100spp/512/: scene_Coateddiffuse_100spp_512x512.exr  scene_Coateddiffuse_100spp_512x512_albedo.exr  scene_Coateddiffuse_100spp_512x512_depth.exr  scene_Coateddiffuse_100spp_512x512_normal_variance.exr  scene_Coateddiffuse_100spp_512x512_variance.exr  scene_Coateddiffuse_albedo_variance.exr  (+2 more)
tests/test_data/: scene_Coateddiffuse_depth_variance.exr  scene_Coateddiffuse_normal.exr  scene_Coateddiffuse_normal_variance.exr
tests/test_generation/: README.md  arrayimgToFile.m  calculateRMSE.m  exrread.m  exrwrite.m  imageDenosing_featureBuffers.m  imageDenosing_featureBuffers2.m
(+41 files in other folders)
